# api-spec.yaml
@@ -20,6 +20,8 @@ tags:
   description: Operations for salesman resources
 - name: Admin Users
   description: Operations for admin user resources
+- name: Posts
+  description: Operations for external posts resource consumption
 paths:
   /api/salesmen/{id}:
     get:
@@ -309,6 +311,42 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/AdminUserDto"
+  /api/posts:
+    get:
+      tags:
+      - Posts
+      operationId: findAll_3
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/PostDto"
+  /api/posts/{id}:
+    get:
+      tags:
+      - Posts
+      operationId: findById_3
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+          exclusiveMinimum: 0
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/PostDto"
+        "404":
+          description: Not Found
 components:
   schemas:
     SalesmanUpdateRequest:
@@ -576,3 +614,16 @@ components:
       - lastName
       - middleName
       - mobileNumber
+    PostDto:
+      type: object
+      properties:
+        userId:
+          type: integer
+          format: int64
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        body:
+          type: string
